finishing up gradients

--- a/gradients/index.html
+++ b/gradients/index.html
@@ -1258,13 +1258,51 @@ background-repeat: <span id="feature03" onKeyUp="changeFeature('backgroundRepeat
   <header><h1>Repeating Radial Gradient</h1></header>
 </div>
 
-<!-- DIVIDER -->
-<div class="slide">
-  <header><h1>repeating-radial-gradient()</h1></header>
+
+
+ <!-- W3C syntax -->
+ <div class="slide">
+     <header><h1>repeating-radial-gradient()</h1></header>
+     <section class="content">
+     <pre contenteditable>repeating-radial-gradient([<em>&lt;shape&gt;</em>|| <em>&lt;size&gt;</em> at <em>&lt;position&gt;</em>]? 
+   [<em>&lt;color-stop&gt;</em>[, <em>&lt;color-hint&gt;</em>]?, ]# <em>&lt;color-stop&gt;</em>)</pre>
+
+     <p>Things to remember:</p>
+     <ol>
+      <li>repeats the radial gradient after the 100% mark.
+      </li>
+      <li>Has no impact when 'furthest-corner' is used or defaults for gradient size</li>
+      <li>Use 'at' with position</li>
+      <li>position is center of gradient</li>
+      <li>If shape is specified as circle or omitted, the size can be a length/percent</li>
+     </ol>
+     </section>
+ </div>
+
+
+ <!-- Repeating Radial Gradient -->
+   <div class="slide object">
+     <header><h1>Repeating Radial Gradient</h1></header>
+<object data="files/radial10.html"></object>
+  <a href="files/radial10.html" class="objectlink" target="play">Try it out</a>
+ </div>
+
+<!--NEXT-->
+<div class="slide intro">
+     <header><h1>Transforms</h1></header>
+     <section class="content">
+    <h1><a href="../transforms/">Next ➹</a></h1></section>
 </div>
 
-
-
+<!-- TOC -->
+<div class="slide">
+  <header><h1>Links</h1></header>
+    <section class="content">
+      <ul>
+      </ul>
+    </section>
+</div>
+ <!--
  <div class="slide" id="">
       <header><h1>Estelle Weyl</header>
       <section class="content">
@@ -1293,7 +1331,7 @@ background-repeat: <span id="feature03" onKeyUp="changeFeature('backgroundRepeat
       </p>
 
       </section>
-  </div>
+  </div>-->
 
 
   </div>
