finishing up gradients

--- a/gradients/index.html
+++ b/gradients/index.html
@@ -431,7 +431,7 @@ BDD9D5*/
 </div>
 
 <div class="slide figure">
-<figure><object data="http://caniuse.com/#search=gradient"></object></figure>
+<figure><object data="https://caniuse.com/#search=gradient"></object></figure>
   <a href="http://caniuse.com/#search=gradient" target="play" title="open resource in new window">➹</a>
 
 </div>
