--- a/gradients/index.html
+++ b/gradients/index.html
@@ -432,7 +432,7 @@ BDD9D5*/
 
 <div class="slide figure">
 <figure><object data="https://caniuse.com/#search=gradient"></object></figure>
-  <a href="http://caniuse.com/#search=gradient" target="play" title="open resource in new window">➹</a>
+  <a href="https://caniuse.com/#search=gradient" target="play" title="open resource in new window">➹</a>
 
 </div>
 
