--- a/gradients/index.html
+++ b/gradients/index.html
@@ -1288,7 +1288,7 @@ background-repeat: <span id="feature03" onKeyUp="changeFeature('backgroundRepeat
  </div>
 
 <!--NEXT-->
-<div class="slide intro">
+<div class="slide">
      <header><h1>Transforms</h1></header>
      <section class="content">
     <h1><a href="../transforms/">Next ➹</a></h1></section>
