removed webkit prefixing and likely broke EVERYTHING

--- a/animations/file_fillmode.html
+++ b/animations/file_fillmode.html
@@ -15,18 +15,18 @@ top: 20px;
 width: 50px;
 height: 50px;
 background-color: red;
--webkit-animation: showme 5s linear 5s 1;
+animation: showme 5s linear 5s 1;
 color: white;
 text-align: center;
 }
 </style>
 
 <style contenteditable>
-.box span {-webkit-animation: showme 5s linear 5s 1;}
-@-webkit-keyframes showme {
-  0% {left: 200px; background-color:blue;-webkit-transform: scale(1) rotate(45deg);}
+.box span {animation: showme 5s linear 5s 1;}
+@keyframes showme {
+  0% {left: 200px; background-color:blue;transform: scale(1) rotate(45deg);}
   50% {background-color:green;}
-  100% {left: 600px; background-color: yellow;-webkit-transform: scale(2) rotate(315deg);}
+  100% {left: 600px; background-color: yellow;transform: scale(2) rotate(315deg);}
 }
 </style>
 <title>Try it out</title>
@@ -34,11 +34,11 @@ text-align: center;
 
 <body>
   <ul>
-  <li class="box">animation-fill-mode: none; <span style="-webkit-animation-fill-mode: none;">1</span></li>
-  <li class="box">animation-fill-mode: forwards;<span style="-webkit-animation-fill-mode: forwards">2</span></li>
-  <li class="box">animation-fill-mode: backwards;<span style="-webkit-animation-fill-mode: backwards">3</span></li>
+  <li class="box">animation-fill-mode: none; <span style="animation-fill-mode: none;">1</span></li>
+  <li class="box">animation-fill-mode: forwards;<span style="animation-fill-mode: forwards">2</span></li>
+  <li class="box">animation-fill-mode: backwards;<span style="animation-fill-mode: backwards">3</span></li>
     <li class="box">animation-fill-mode: both;<span
-      style="-webkit-animation-fill-mode: both;">4</span></li>
+      style="animation-fill-mode: both;">4</span></li>
   </li>
 </body>
 </html>
