--- a/animations/file_steps.html
+++ b/animations/file_steps.html
@@ -12,9 +12,9 @@ div {margin:auto;}
 
 <style contenteditable>#psy {width: 225px; height: 400px;
   background-image: url(sprite.png);
-  -webkit-animation: gangham 4s steps(22,start) infinite;
+  animation: gangham 4s steps(22,start) infinite;
 }
-@-webkit-keyframes gangham {
+@keyframes gangham {
   0% {background-position: 0 0}
   100% {;background-position: -4950px 0}
 }
