--- a/animations/files/nomidpoint.html
+++ b/animations/files/nomidpoint.html
@@ -19,12 +19,7 @@ div {
 </style>
 
 <style contenteditable id="editme">div {
-  -webkit-animation: height linear infinite 5s;
-  animation: height infinite 5s;
-}
-@-webkit-keyframes height {
-  0% {height: auto; width: auto;}
-  100% {height: 200px; width: 200px;}
+  animation: height linear infinite 5s;
 }
 @keyframes height height {
   0% {height: auto; width: auto;}
