--- a/animations/files/repeated_keyframe2.html
+++ b/animations/files/repeated_keyframe2.html
@@ -21,8 +21,7 @@ div {
 
 <style contenteditable id="editme">
 div {
-  -webkit-animation: infinite 4s alternate;
-  -webkit-animation-name: opacity, colors;
+  animation-name: opacity, colors;
   animation: infinite 4s alternate;}
 @-webkit-keyframes colors {
   from { background-color: green; }
