--- a/media/files/columns.html
+++ b/media/files/columns.html
@@ -13,8 +13,8 @@ body {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
 
 </style>
 
-<style contenteditable>#content { -webkit-columns: 8em 3; }
-h1 {-webkit-column-span: all;}
+<style contenteditable>#content {columns: 8em 3; }
+h1 {column-span: all;}
 </style>
 <title>Columns </title>
 </head>
