--- a/media/files/supports.html
+++ b/media/files/supports.html
@@ -8,7 +8,7 @@ html {min-height:100%;}
 </style>
 
 <style contenteditable class="editme"> 
-@media screen and (-webkit-transform-3d){
+@media screen and (transform-3d){
 	 :root {background-color: royalblue;}
  }
 </style>
