--- a/media/index.html
+++ b/media/index.html
@@ -423,7 +423,7 @@ min-resolution: 192dpi</pre>
 <hr/>
 <p>Don't use</p>
 <pre contenteditable>
-@media screen and (<b>-webkit-transform-3d</b>) {
+@media screen and (<b>transform-3d</b>) {
   .transforms {}
 }</pre>
 <hr/>
