--- a/transforms/files/animation/important.html
+++ b/transforms/files/animation/important.html
@@ -19,13 +19,9 @@ div {
 </style>
 
 <style contenteditable id="editme">
-div { -webkit-animation: test infinite 10s alternate;
+div { 
   animation: test infinite 10s alternate;
   background: red; border: 5px black solid;
-}
-@-webkit-keyframes test {
-  45% { background: green; }
-  55% { background: blue !important; border-width: 20px !important; }
 }
 @keyframes test {
   45% { background: green; }
