--- a/transforms/files/animation/navbar.html
+++ b/transforms/files/animation/navbar.html
@@ -29,14 +29,14 @@ nav > ul > li {
   position:relative;
 }
 nav ul ul {
-  -webkit-transform: scale(1,0);
-  -webkit-transform-origin: top center;
-  -webkit-transition:0.2s linear 50ms;
+  transform: scale(1,0);
+  transform-origin: top center;
+  transition:0.2s linear 50ms;
   position:absolute;
   top: 100%;
 }
 nav li:hover ul {
-  -webkit-transform: scale(1,1);
+  transform: scale(1,1);
 }
 </style>
 <title></title>
