--- a/transforms/files/animation/no0or100.html
+++ b/transforms/files/animation/no0or100.html
@@ -18,13 +18,9 @@ div {
 </style>
 
 <style contenteditable id="editme">
-div { -webkit-animation: test infinite 10s alternate;
+div { 
   animation: test infinite 10s alternate;
   background-color: red;  border: 1px black solid;
-}
-@-webkit-keyframes test {
-  45% { background-color: green; border-width: 10px;}
-  55% { background-color: blue; border-width: 20px;}
 }
 @keyframes test {
   45% { background-color: green; border-width: 10px;}
