--- a/animations/files/file_fillmode.html
+++ b/animations/files/file_fillmode.html
@@ -13,7 +13,7 @@ top: 20px;
 width: 50px;
 height: 50px;
 background-color: red;
--webkit-animation: showme 5s linear 5s 1;
+animation: showme 5s linear 5s 1;
 color: white;
 text-align: center;
 }
