--- a/animations/files/nameaddedlater.html
+++ b/animations/files/nameaddedlater.html
@@ -12,7 +12,6 @@ body {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
 div {
   padding: 20px;
   border: 5px black solid !important;
-  -webkit-animation: red infinite 3s alternate;
   animation: red infinite 3s alternate;
   color: white;
   font-family: sans-serif;
@@ -21,15 +20,7 @@ div {
 }
 
 
-@-webkit-keyframes red {
-  from, 30%{
-    background-color: #f00;
-  }
-  to {
-    background-color: #f33;
-  }
-}
-@keyframes red {
+eyframes red {
   from, 30%{
     background-color: #f00;
   }
@@ -38,14 +29,6 @@ div {
   }
 }
 
-  @-webkit-keyframes green {
-  from, 30%{
-    background-color: #030;
-  }
-  to {
-    background-color: #393;
-  }
-}
 @keyframes green {
   from, 30%{
     background-color: #030;
@@ -55,14 +38,7 @@ div {
   }
 }
 
-  @-webkit-keyframes blue {
-  from, 30%{
-    background-color: #0000ff;
-  }
-  to {
-    background-color: #3333ff;
-  }
-}
+
 @keyframes blue {
   from, 30%{
     background-color: #0000ff;
@@ -75,8 +51,6 @@ div {
 
 <style contenteditable id="editme">
 div {
-  -webkit-animation-name: xred, xgreen, xblue;
-  -webkit-animation-delay: 2s;
   animation-name: xred, xgreen, xblue;
   animation-delay: 2s;
 }
