--- a/animations/files/navbar.html
+++ b/animations/files/navbar.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 <style>
 head, style {display: block;}
-[contenteditable] {-webkit-user-modify: read-write-plaintext-only;}
+[contenteditable] {user-modify: read-write-plaintext-only;}
 style:first-of-type {visibility:hidden;}
 style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-family: monospace; white-space:pre; border-radius: 10px; border: 3px solid #aaa; background-color:#dedede; margin: 20px auto; width: 80%; font-family:"Courier New", Courier, monospace; position: absolute; top: 150px;
   height: 450px; overflow: scroll; left: 20px;}
@@ -29,14 +29,14 @@ nav > ul > li {
   position:relative;
 }
 nav ul ul {
-  -webkit-transform: scale(1,0);
-  -webkit-transform-origin: top center;
-  -webkit-transition:0.2s linear 50ms;
+  transform: scale(1,0);
+  transform-origin: top center;
+  transition:0.2s linear 50ms;
   position:absolute;
   top: 100%;
 }
 nav li:hover ul {
-  -webkit-transform: scale(1,1);
+  transform: scale(1,1);
 }
 </style>
 <title></title>
