--- a/media/files/typowidth.html
+++ b/media/files/typowidth.html
@@ -10,7 +10,7 @@ style:last-of-type {padding: 20px; font-size: 1.5em; white-space: pre; font-fami
 body {font-family:Verdana, Geneva, sans-serif; font-size:1.2em}
 
 :root {background-color:#ccc;}
-:root {background: -webkit-linear-gradient(right,white 20%,rgba(0,0,0,0.1) 20.2%,white 20.4%,white 79%,rgba(0,0,0,0.1) 79.2%,white 79.4%);}
+:root {background: linear-gradient(to left,white 20%,rgba(0,0,0,0.1) 20.2%,white 20.4%,white 79%,rgba(0,0,0,0.1) 79.2%,white 79.4%);}
 
 </style>
 
