--- a/transforms/files/selectors/meter2.html
+++ b/transforms/files/selectors/meter2.html
@@ -7,12 +7,12 @@
 <style type="text/css">
 meter {width:400px;}
 ::-webkit-meter-optimum-value {
-    background-image: -webkit-linear-gradient(#000, #7a3);
+    background-image: linear-gradient(#000, #7a3);
 }
 
-::-webkit-meter-suboptimum-value{background-image: -webkit-linear-gradient(#f00, #7a3);
+::-webkit-meter-suboptimum-value{background-image: linear-gradient(#f00, #7a3);
 }
-::-webkit-meter-even-less-good-value {background-image: -webkit-linear-gradient(#00f, #7a3);
+::-webkit-meter-even-less-good-value {background-image: linear-gradient(#00f, #7a3);
 }
 </style>
 </head>
