added to readme. don't know what i did with animations

--- a/animations/index.html
+++ b/animations/index.html
@@ -1307,7 +1307,7 @@ animationend
 <!-- NEXT -->
 <div class="slide divider">
      <header><h1>Other Stuff</h1></header>
-    <a href="../other/">Next ➹</a>
+    <h1><a href="../other/">Next ➹</a></h1>
     </div>
 
 <!-- TOC -->
